--- a/project.html
+++ b/project.html
@@ -29,48 +29,96 @@
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Blogs</a>
             </li>
           </ul>
         </div>
       </nav>
-    <div class="container d-flex justify-content-center align-items-center mt-5">
-        <div class="card" style="width: 30rem;">
-            <img src="./images/download.jpg" class="card-img-top" alt="Campground">
-            <div class="card-body">
-              <h5 class="card-title">Yelp-camp</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Full Stack Campground Website</h6>
-              <p class="card-text"></p>
-              <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
-              <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+      <div class="col-6 offset-3">
+        <div class="container d-flex justify-content-center align-items-center mt-5">
+          <div class="card" style="width: 30rem;">
+              <img src="./images/download.jpg" class="card-img-top" alt="Campground">
+              <div class="card-body">
+                <h5 class="card-title text-white">Yelp-camp</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-white">Full Stack Campground Website</h6>
+                <p class="card-text text-white"></p>
+                <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
+                <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+              </div>
             </div>
-          </div>
-     </div>
-     <div class="container d-flex justify-content-center align-items-center mt-5">
-      <div class="card" style="width: 30rem;">
-          <img src="./images/download.jpg" class="card-img-top" alt="Campground">
-          <div class="card-body">
-            <h5 class="card-title">Yelp-camp</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Full Stack Campground Website</h6>
-            <p class="card-text"></p>
-            <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
-            <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
-          </div>
-        </div>
-   </div>
-   <div class="container d-flex justify-content-center align-items-center mt-5">
-    <div class="card" style="width: 30rem;">
-        <img src="./images/download.jpg" class="card-img-top" alt="Campground">
-        <div class="card-body">
-          <h5 class="card-title">Yelp-camp</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Full Stack Campground Website</h6>
-          <p class="card-text"></p>
-          <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
-          <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
-        </div>
-      </div>
- </div>
- 
+       </div>
+       </div>
+       <div class="col-6 offset-3">
+        <div class="container d-flex justify-content-center align-items-center mt-5">
+          <div class="card" style="width: 30rem;">
+              <img src="./images/download.jpg" class="card-img-top" alt="Campground">
+              <div class="card-body">
+                <h5 class="card-title text-white">Yelp-camp</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-white">Full Stack Campground Website</h6>
+                <p class="card-text text-white"></p>
+                <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
+                <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+              </div>
+            </div>
+       </div>
+       </div>
+       <div class="col-6 offset-3">
+        <div class="container d-flex justify-content-center align-items-center mt-5">
+          <div class="card" style="width: 30rem;">
+              <img src="./images/download.jpg" class="card-img-top" alt="Campground">
+              <div class="card-body">
+                <h5 class="card-title text-white">Yelp-camp</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-white">Full Stack Campground Website</h6>
+                <p class="card-text text-white"></p>
+                <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
+                <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+              </div>
+            </div>
+       </div>
+       </div>
+       <div class="col-6 offset-3">
+        <div class="container d-flex justify-content-center align-items-center mt-5">
+          <div class="card" style="width: 30rem;">
+              <img src="./images/download.jpg" class="card-img-top" alt="Campground">
+              <div class="card-body">
+                <h5 class="card-title text-white">Yelp-camp</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-white">Full Stack Campground Website</h6>
+                <p class="card-text text-white"></p>
+                <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
+                <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+              </div>
+            </div>
+       </div>
+       </div>
+       <div class="col-6 offset-3">
+        <div class="container d-flex justify-content-center align-items-center mt-5">
+          <div class="card" style="width: 30rem;">
+              <img src="./images/download.jpg" class="card-img-top" alt="Campground">
+              <div class="card-body">
+                <h5 class="card-title text-white">Yelp-camp</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-white">Full Stack Campground Website</h6>
+                <p class="card-text text-white"></p>
+                <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
+                <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+              </div>
+            </div>
+       </div>
+       </div>
+       <div class="col-6 offset-3">
+        <div class="container d-flex justify-content-center align-items-center mt-5">
+          <div class="card" style="width: 30rem;">
+              <img src="./images/download.jpg" class="card-img-top" alt="Campground">
+              <div class="card-body">
+                <h5 class="card-title text-white">Yelp-camp</h5>
+                <h6 class="card-subtitle mb-2 text-muted text-white">Full Stack Campground Website</h6>
+                <p class="card-text text-white"></p>
+                <a href="https://github.com/abhi784pat/Yelp-Camp.git" class="card-link">Project Repo</a>
+                <a href="https://murmuring-shore-71703.herokuapp.com/campgrounds" class="card-link">live Project</a>
+              </div>
+            </div>
+       </div>
+       </div>
+ <br/>
  <footer class="footer bg-dark">
   <div class="container">
     <div style="text-align: center;">
